# objectscale-s3-client-python

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  testDemo.sh
docs/: CONTRIBUTING.md  Contributions.md  extendapicall.md  getSearchMetadata.md  make.bat  overwrite_boto3-session-initialization.md  overwrite_boto3_session_initialization.md  publish.md
docs/addingrequestobject/: AddRequestObject.md  AddRequestObjectDemo.py  service-2.sdk-extras.json
docs/addresponseobject/: AddResponseObjectDemo.py  addresponseobject.md
docs/addresponseobject/~/.aws/models/s3/2006-03-01/: service-2.sdk-extras.json
docs/boto3dependency/: demo  demo.py
docs/deletekeys/: deleteKeys.py  deleteKeysDemo.sh  service-2.sdk-extras.json
docs/extendapicall/: ExtendAPICallDemo.py  extendapicall.md  service-2.sdk-extras.json
docs/modifiedclient/: ModifiedClient.md  ModifiedClient.py  ObjectScaleS3.py  main.py  modified.sh
docs/newapicall/: creds.txt  newapicall.md  service-2.sdk-extras.json  test.py
docs/newapicall/data/s3/2006-03-01/: service-2.json
docs/publishing/: publish.md
docs/query/: query.py  responseVisualization.txt  service-2.sdk-extras.json
docs/source/: conf.py  index.rst  requirements-docs.txt
docs/source/_static/js/: custom.js
docs/source/reference/services/: index.rst  s3.rst
docs/testDocs/: sampleTests.py  testInit.py  testMock.py  testTarget.py  testingFramework.md
functionality-docs/: connecting_using_s3_compatible.md  everythinginextras.md
functionality-docs/addingrequestobject/: AddRequestObjectDemo.py  requestDemo.sh
functionality-docs/addresponseobject/: AddResponseObject.md  AddResponseObjectDemo.py  responseDemo.sh  service-2.sdk-extras.json
functionality-docs/deletekeys/: deleteKeys.py  service-2.sdk-extras.json
functionality-docs/extendapicall/: ExtendAPICallDemo.py  extendDemo.sh  extendapicall.md
functionality-docs/modifiedclient/: ObjectScaleS3.py  main.py  service-2.sdk-extras.json
functionality-docs/newapicall/: newapicall.md  newapicallDemo.sh  test.py
functionality-docs/publishing/: publish.md  publishPyPi.md
functionality-docs/query/: query.py  queryDemo.sh  responseVisualization.txt  service-2.sdk-extras.json
functionality-docs/testDocs/: sampleTests.py  testMock.py  testTarget.py
objectscale_s3_client/: __init__.py
objectscale_s3_client/data/s3/2023-2-11/: service-2.sdk-extras.json
obs_s3_client/: __init__.py  test.py
obs_s3_client/data/s3/2023-2-11/: service-2.sdk-extras.json
obs_s3_client/tests/: unittests.py
source/: conf.py  generatedocs.py  index.txt  sample.json
source/_templates/: sample.tmpl
sprint-reports/: sprint1.md  sprint2.md  sprint3.md  sprint4.md  sprint4Copy.md
src/main/python/: __init__.py  client.py  createbucket.py  run  service-2.sdk-extras.json  test.py
src/tests/: creatingbucketTests.py  unittests.py
src/tests/obs-s3-client/: __init__.py
tests/: run  unittests.py
