[bdist_wheel]
universal = 0

[metadata]
name = pyscaleS3
version = 0.0.1
authors = Drayer Sivertsen, Nathan Marugame, Killian Griffin
author_email = drayer.sivertsen@wsu.edu, nathan.marugame@wsu.edu, killian.griffin@wsu.edu
url = https://github.com/EMCECS/objectscale-s3-client-python
project_urls = 
    Bug Tracker = https://github.com/EMCECS/objectscale-s3-client-python/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src


