[bdist_wheel]
universal = 0

[metadata]
name = obs-s3-client
version = 0.0.3
authors = Drayer Sivertsen, Nathan Marugame, Killian Griffin
author_email = drayer.sivertsen@wsu.edu, nathan.marugame@wsu.edu, killian.griffin@wsu.edu
url = https://github.com/EMCECS/objectscale-s3-client-python
project_urls = 
    Bug Tracker = https://github.com/EMCECS/objectscale-s3-client-python/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

requires_dist =
    botocore>=1.29.9,<1.30.0
    jmespath>=0.7.1,<2.0.0
    s3transfer>=0.6.0,<0.7.0

[options.extras_require]
crt = botocore[crt]>=1.21.0,<2.0a0

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src


